--- a/background.html
+++ b/background.html
@@ -128,7 +128,7 @@
             formData.append('image_file', image);
             formData.append('size', 'auto');
 
-            const apiKey = 'UkH2ptVszpceBpb3Kmq4ewwg';
+            const apiKey = 'Your API KEY';
 
             fetch('https://api.remove.bg/v1.0/removebg', {
                 method: 'POST',
